ihwa/cluster-scope/validation_webhook_triggers_tekton_dev.validatingwebhookconfiguration.admissionregistration.k8s.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: tekton-triggers
    app.kubernetes.io/part-of: tekton-triggers
    triggers.tekton.dev/release: v0.25.0
  name: validation.webhook.triggers.tekton.dev
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: tekton-triggers-webhook
      namespace: tekton-pipelines
  failurePolicy: Fail
  name: validation.webhook.triggers.tekton.dev
  sideEffects: None
